# zsLib-eventing

./: .gitignore  BUILD.gn  CMakeLists.txt  README.md  runIDLCompiler.py  zslib_eventing_tool.gni
projects/linux/codelite/: zsLib-eventing.workspace
projects/linux/codelite/zsLib-eventing/: zsLib-eventing.project
projects/linux/codelite/zsLib-eventing-tool/: zsLib-eventing-tool.project
projects/linux/codelite/zsLib-eventing-tool-compiler/: main.cpp  zsLib-eventing-tool-compiler.project
projects/msvc/: zsLib.Eventing.Universal.sln  zsLib.Eventing.Win32.sln  zsLib.Eventing.sln
projects/msvc/zsLib.Eventing.Tool.Compiler.Universal/: zsLib.Eventing.Tool.Compiler.vcxproj  zsLib.Eventing.Tool.Compiler.vcxproj.filters
projects/msvc/zsLib.Eventing.Tool.Compiler.Win32/: main.cpp  zsLib.Eventing.Tool.Compiler.vcxproj  zsLib.Eventing.Tool.Compiler.vcxproj.filters
projects/msvc/zsLib.Eventing.Tool.Universal/: zsLib.Eventing.Tool.vcxproj  zsLib.Eventing.Tool.vcxproj.filters
projects/msvc/zsLib.Eventing.Tool.Win32/: zsLib.Eventing.Tool.vcxproj  zsLib.Eventing.Tool.vcxproj.filters
projects/msvc/zsLib.Eventing.Universal/: zsLib.Eventing.vcxproj  zsLib.Eventing.vcxproj.filters
projects/msvc/zsLib.Eventing.Win32/: zsLib.Eventing.vcxproj  zsLib.Eventing.vcxproj.filters
projects/xcode/zsLib-Eventing.xcworkspace/: contents.xcworkspacedata
projects/xcode/zsLib-eventing-ios/zsLib-eventing-ios.xcodeproj/: project.pbxproj
projects/xcode/zsLib-eventing-osx/zsLib-eventing-osx.xcodeproj/: project.pbxproj
projects/xcode/zsLib-eventing-tool-ios/zsLib-eventing-tool-ios.xcodeproj/: project.pbxproj
projects/xcode/zsLib-eventing-tool-osx/zsLib-eventing-tool-osx.xcodeproj/: project.pbxproj
projects/xcode/zsLib.Eventing.Compiler.Tool-osx.Tool/zsLib.Eventing.Compiler.Tool/: main.cpp
projects/xcode/zsLib.Eventing.Compiler.Tool-osx.Tool/zsLib.Eventing.Compiler.Tool.xcodeproj/: project.pbxproj
projects/xcode/zsLib.Eventing.Compiler.Tool-osx.Tool/zsLib.Eventing.Compiler.Tool.xcodeproj/xcshareddata/xcschemes/: zsLib.Eventing.Compiler.Tool.xcscheme
zsLib/: CMakeLists.txt
zsLib/eventing/: IEventingTypes.h  IHasher.h  IHelper.h  IIDLTypes.h  IRemoteClient.h  IRemoteEventing.h  IRemoteServer.h  IWrapperTypes.h  eventing.h  types.h
zsLib/eventing/cpp/: zsLib_eventing.cpp  zsLib_eventing_EventingTypes.cpp  zsLib_eventing_Hasher.cpp  zsLib_eventing_Helper.cpp  zsLib_eventing_IDLTypes.cpp  zsLib_eventing_RemoteClient.cpp  zsLib_eventing_RemoteEventing.cpp  zsLib_eventing_RemoteServer.cpp  zsLib_eventing_WrapperTypes.cpp
zsLib/eventing/internal/: types.h  zsLib_eventing_Helper.h  zsLib_eventing_RemoteClient.h  zsLib_eventing_RemoteEventing.h  zsLib_eventing_RemoteServer.h  zsLib_eventing_WrapperTypes.h
zsLib/eventing/tool/: CMakeLists.txt  ICommandLine.h  ICompiler.h  IProcess.h  OutputStream.h  main.cpp  tool.h  types.h
zsLib/eventing/tool/cpp/: zsLib_eventing_tool.cpp  zsLib_eventing_tool_CommandLine.cpp  zsLib_eventing_tool_Compiler.cpp  zsLib_eventing_tool_EventingCompiler.cpp  zsLib_eventing_tool_GenerateHelper.cpp  zsLib_eventing_tool_GenerateJson.cpp  zsLib_eventing_tool_GenerateStructC.cpp  zsLib_eventing_tool_GenerateStructCppWinrt.cpp  zsLib_eventing_tool_GenerateStructCx.cpp  zsLib_eventing_tool_GenerateStructDotNet.cpp  zsLib_eventing_tool_GenerateStructHeader.cpp  zsLib_eventing_tool_GenerateStructImpHeader.cpp  zsLib_eventing_tool_GenerateStructImplCpp.cpp  zsLib_eventing_tool_GenerateStructMsidl.cpp  zsLib_eventing_tool_GenerateStructPython.cpp  zsLib_eventing_tool_GenerateTypesHeader.cpp  zsLib_eventing_tool_Helper.cpp  zsLib_eventing_tool_IDLCompiler.cpp  zsLib_eventing_tool_Monitor.cpp  zsLib_eventing_tool_Process.cpp  zsLib_eventing_tool_WrapperCompiler.cpp
zsLib/eventing/tool/internal/: types.h  zsLib_eventing_tool.h  zsLib_eventing_tool_CommandLine.h  zsLib_eventing_tool_Compiler.h  zsLib_eventing_tool_EventingCompiler.h  zsLib_eventing_tool_GenerateHelper.h  zsLib_eventing_tool_GenerateJson.h  zsLib_eventing_tool_GenerateStructC.h  zsLib_eventing_tool_GenerateStructCppWinrt.h  zsLib_eventing_tool_GenerateStructCx.h  zsLib_eventing_tool_GenerateStructDotNet.h  zsLib_eventing_tool_GenerateStructHeader.h  zsLib_eventing_tool_GenerateStructImplCpp.h  zsLib_eventing_tool_GenerateStructImplHeader.h  zsLib_eventing_tool_GenerateStructMsidl.h  zsLib_eventing_tool_GenerateStructPython.h  zsLib_eventing_tool_GenerateTypesHeader.h  zsLib_eventing_tool_Helper.h  zsLib_eventing_tool_IDLCompiler.h  zsLib_eventing_tool_Monitor.h  zsLib_eventing_tool_Process.h  zsLib_eventing_tool_WrapperCompiler.h
