# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("zslib_eventing") {

    configs -= [ "//build/config/compiler:no_rtti" ]
    if (!is_win) {
      configs -= [ "//build/config/gcc:no_exceptions" ]
    }
    configs -= [ "//build/config/compiler:chromium_code" ]
    sources = [
      "zsLib/eventing/eventing.h",
      "zsLib/eventing/IEventingTypes.h",
      "zsLib/eventing/IHasher.h",
      "zsLib/eventing/IHelper.h",
      "zsLib/eventing/IIDLTypes.h",
      "zsLib/eventing/IRemoteEventing.h",
      "zsLib/eventing/types.h",
      "zsLib/eventing/cpp/zsLib_eventing.cpp",
      "zsLib/eventing/cpp/zsLib_eventing_EventingTypes.cpp",
      "zsLib/eventing/cpp/zsLib_eventing_Hasher.cpp",
      "zsLib/eventing/cpp/zsLib_eventing_Helper.cpp",
      "zsLib/eventing/cpp/zsLib_eventing_IDLTypes.cpp",
      "zsLib/eventing/cpp/zsLib_eventing_RemoteEventing.cpp",
      "zsLib/eventing/internal/types.h",
      "zsLib/eventing/internal/zsLib_eventing_EventingTypes.h",
      "zsLib/eventing/internal/zsLib_eventing_Hasher.h",
      "zsLib/eventing/internal/zsLib_eventing_Helper.h",
      "zsLib/eventing/internal/zsLib_eventing_IDLTypes.h",
      "zsLib/eventing/internal/zsLib_eventing_RemoteEventing.h",
    ]

    defines = [
    "_LIB",
  ]
}
