# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

#import("//build/compiled_action.gni")

template("compile_event_macro") {
    action_foreach(target_name) {

      script = "//ortc/runEventCompiler.py"

      sources = invoker.sources


      outputs = [ 
        "$target_out_dir/{{source_name_part}}.o",
      ]

      args = [
        "{{source}}",
      ]
    }
}

template("compile_single_event_macro") {
    action(target_name) {
    
      if (defined(invoker.public_deps)) {
        public_deps = invoker.public_deps
      }

      script = "//ortc/runEventCompiler.py"
      
      sources = invoker.sources
      outputs = invoker.outputs
      #eventOutput = invoker.eventOutput

      args = [
        rebase_path(sources[0], root_build_dir),
        #rebase_path(eventOutput[0], root_build_dir),
      ]
      if (defined(invoker.deps)) {
        deps = invoker.deps
      }
      
      
    }
}

