# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

#import("//build/compiled_action.gni")

template("compile_event_macro") {
    action_foreach(target_name) {

      script = "//third_party/ortc/runEventCompiler.py"

      sources = invoker.sources

      #Not of interest. Added just because outputs is required by action
      outputs = [ 
        "$target_out_dir/{{source_name_part}}",
      ]

      args = [
        "{{source}}",
        "$host_toolchain",
      ]

      deps = [ "//third_party/ortc/zsLib-eventing:zslib-eventing-tool-compiler($host_toolchain)" ]

    }
}

template("compile_single_event_macro") {
    action(target_name) {

      script = "//third_party/ortc/runEventCompiler.py"
      
      sources = invoker.sources
      
      #Not of interest. Added just because outputs is required by action
      outputs = [ 
        "$target_out_dir/{source_name_part}",
      ]

      args = [
        rebase_path(sources[0], root_build_dir),
        "$host_toolchain",
      ]

      deps = [ "//third_party/ortc/zsLib-eventing:zslib-eventing-tool-compiler($host_toolchain)" ]

    }
}

template("compile_idl_macro") {
    action(target_name) {

      script = "//third_party/ortc/runIDLCompiler.py"
      
      sources = invoker.sources
      sourcePathPrefix = invoker.sourcePathPrefix

      #Not of interest. Added just because outputs is required by action
      #outputs = [ 
      #  "$target_out_dir/{source_name_part}",
      #]

      outputs = invoker.outputs

      args = [
        rebase_path(sources[0], root_build_dir),
        sourcePathPrefix,
        "$host_toolchain",
      ]

      deps = [ "//third_party/ortc/zsLib-eventing:zslib-eventing-tool-compiler($host_toolchain)" ]

    }
}

